# Keptr

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  build-signed-release.ps1  context.md  index.html  package-lock.json  package.json  prompt.txt  setup-repo.ps1  spotlight.html  tailwind.config.js  tsconfig.json  updater.json  upload-release.ps1  vite.config.ts
.github/workflows/: release.yml
keptr-core/: Cargo.toml
keptr-core/src/: lib.rs  models.rs  vault.rs
keptr-crypto/: Cargo.toml
keptr-crypto/src/: kdf.rs  lib.rs  mac.rs  memory.rs  symmetric.rs
keptr-store/: Cargo.toml
keptr-store/src/: db.rs  lib.rs
scripts/: generate-icons.js
src/: App.tsx  GeneratorView.tsx  SpotlightApp.tsx  index.css  spotlight-main.tsx
src-tauri/: .gitignore  Cargo.toml  check_output.txt  dh_test.rs  dh_test2.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/sql/: 03_public_key_rpc.sql  04_shared_items_rls.sql  05_fix_public_keys_unique.sql  06_get_email_rpc.sql
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: auth.rs  autotype.rs  backup.rs  cloud_auth.rs  files.rs  mod.rs  security_key.rs  settings.rs  share.rs  vault.rs
src-tauri/src/models/: api_key.rs  bank.rs  card.rs  file.rs  item.rs  license.rs  login.rs  mod.rs  note.rs
src-tauri/src/security/: anti_forensic.rs  argon2.rs  asymmetric.rs  csprng.rs  ed25519.rs  hashing.rs  key_hierarchy.rs  mod.rs  pepper.rs  secret.rs  shamir.rs  xchacha20.rs
src-tauri/src/services/: audit.rs  cloud_auth.rs  e2e_service.rs  file_service.rs  hardware_key.rs  mod.rs  monitor.rs  oauth.rs  share_service.rs  sync_service.rs  vault_registry.rs
src-tauri/src/storage/: database.rs  mod.rs  models.rs
src/components/layout/: Dashboard.tsx  Sidebar.tsx  TitleBar.tsx
src/components/ui/: password-input.tsx  toaster.tsx
src/features/auth/: AuthScreen.tsx  SetupScreen.tsx
src/features/backup/: BackupScreen.tsx  RecoveryScreen.tsx
src/features/generator/: PasswordGenerator.tsx  generator.ts  wordlist.ts
src/features/security/: SecuritySettings.tsx  UpdaterSettings.tsx  useSecureClipboard.ts
src/features/vault/: FileVault.tsx  InboxDialog.tsx  ItemDialog.tsx  ShareDialog.tsx  VaultList.tsx  VaultSelection.tsx
src/features/vault/forms/: ApiKeyForm.tsx  BankForm.tsx  CardForm.tsx  FileForm.tsx  LicenseForm.tsx  LoginForm.tsx  NoteForm.tsx
src/hooks/: use-toast.ts
src/lib/: validators.ts
src/services/: api.ts
src/types/: vault.ts
src/utils/: fileFilter.ts  icons.tsx  labels.ts
