[package]
name = "keptr-crypto"
version = "0.0.1"
edition = "2021"
description = "Keptr Cryptographic Primitives & Secure Memory Management"

[dependencies]
argon2 = "0.5"
chacha20poly1305 = "0.10"
ed25519-dalek = "2.0"
rand = "0.8"
zeroize = { version = "1.6", features = ["zeroize_derive"] }
sha2 = "0.10"
hex = "0.4"
hmac = "0.12"
