[package]
name = "keptr"
version = "0.0.1"
description = "Keptr Desktop"
authors = ["Keptr Team"]
edition = "2021"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
rand = "0.8"
keptr-crypto = { path = "../keptr-crypto" }
keptr-core = { path = "../keptr-core" }
keptr-store = { path = "../keptr-store" }

[features]
custom-protocol = ["tauri/custom-protocol"]
